--- a/package.json
+++ b/package.json
@@ -11,9 +11,11 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "eslint": "^8.48.0",
     "nodemon": "^2.0.15"
   },
   "dependencies": {
+    "dotenv": "^16.0.3",
     "express": "^4.17.3",
     "mongoose": "^6.2.6"
   }
